feat: add prometheus
